# vscode-linux-rp2040-pico-blinky

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  cicd.sh
docker/: Dockerfile.build  Dockerfile.gcc  Dockerfile.toolchain
hardware/models/: rp2040-80-20-mount-bottom.stl  rp2040-80-20-mount-top-logo.stl  rp2040-80-20-mount-top.stl
src/: main.cpp
